# builtin_methods_listing

./: .gitignore  README.md  pyproject.toml
.github/workflows/: generate_cheatsheet.yml  pytest.yml
docs/: builtins_cheatsheet.md
src/myproj/: __init__.py  builtins_cheatsheet.py  cli.py  core.py
tests/: __init__.py  test_builtins_cheatsheet.py  test_core.py
