[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myproj"
version = "0.1.0"
description = "A simple Python project"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
license = {text = "MIT"}

[project.scripts]
myproj = "myproj.cli:main"

[project.optional-dependencies]
dev = ["pytest","pytest-sugar"]

[tool.setuptools]
packages = ["myproj"]
package-dir = {"" = "src"}
